# programming-problems-rs

./: Cargo.toml  readme.md
src/elementary/: 1-hello-world.rs  10-leap-years.rs  11-compute-pi.rs  2-hello.rs  3-hello-alice-bob.rs  3-hey-names.rs  4-sum-n.rs  4-sum.rs  5-multiples.rs  5-sum-n-multiples.rs  6-sum-or-product.rs  7-multiplication-table.rs  8-all-primes.rs  8-primes.rs  9-guess.rs  9-guessing-game.rs
src/list, strings/: 1-largest-element.rs  10-alternating.rs  11-merge-sorted.rs  12-rotate-list.rs  12-rotate.rs  13-fibonacci.rs  14-digits.rs  14-number-digits.rs  15-calc.rs  16-sort.rs  17-binary-search.rs  18-framed.rs  19-pig-latin.rs  2-reverse-list-inplace.rs  2-reverse-list.rs  3-has-element.rs  4-odd-positions.rs  5-running-total.rs  6-test-palindrome.rs  7-sum-construct.rs  8-on-all.rs  9-concatenate.rs
