[package]
name = "spp"
version = "0.1.0"
authors = ["FallDown<jere.kaplas@gmail.com>"]

[dependencies]
rand="*"
unicode-segmentation = "0.1.2"
num="*"

[[bin]]
name = "ele-1"
path = "src/elementary/1-world.rs"

[[bin]]
name = "ele-2"
path = "src/elementary/2-hey.rs"

[[bin]]
name = "ele-3"
path = "src/elementary/3-hey-names.rs"

[[bin]]
name = "ele-4"
path = "src/elementary/4-sum.rs"

[[bin]]
name = "ele-5"
path = "src/elementary/5-multiples.rs"

[[bin]]
name = "ele-6"
path = "src/elementary/6-sum-or-product.rs"

[[bin]]
name = "ele-7"
path = "src/elementary/7-mult-table.rs"

[[bin]]
name = "ele-8"
path = "src/elementary/8-primes.rs"

[[bin]]
name = "ele-9"
path = "src/elementary/9-guess.rs"

[[bin]]
name = "ele-10"
path = "src/elementary/10-leap-year.rs"

[[bin]]
name = "ele-11"
path = "src/elementary/11-pi.rs"

[[bin]]
name = "ls-1"
path = "src/lists_strings/1-largest-element.rs"

[[bin]]
name = "ls-2"
path = "src/lists_strings/2-reverse-list.rs"

[[bin]]
name = "ls-3"
path = "src/lists_strings/3-has-element.rs"

[[bin]]
name = "ls-4"
path = "src/lists_strings/4-odd-positions.rs"

[[bin]]
name = "ls-5"
path = "src/lists_strings/5-running-total.rs"

[[bin]]
name = "ls-6"
path = "src/lists_strings/6-palindromes.rs"

[[bin]]
name = "ls-7"
path = "src/lists_strings/7-sums.rs"

[[bin]]
name = "ls-8"
path = "src/lists_strings/8-on-all.rs"

[[bin]]
name = "ls-9"
path = "src/lists_strings/9-concatenate.rs"

[[bin]]
name = "ls-10"
path = "src/lists_strings/10-alternate.rs"

[[bin]]
name = "ls-11"
path = "src/lists_strings/11-merge-sorted.rs"

[[bin]]
name = "ls-12"
path = "src/lists_strings/12-rotate.rs"

[[bin]]
name = "ls-13"
path = "src/lists_strings/13-fibonacci.rs"

[[bin]]
name = "ls-14"
path = "src/lists_strings/14-digits.rs"

[[bin]]
name = "ls-15"
path = "src/lists_strings/15-calc.rs"

[[bin]]
name = "ls-16"
path = "src/lists_strings/16-sort.rs"

[[bin]]
name = "ls-17"
path = "src/lists_strings/17-binary-search.rs"

[[bin]]
name = "ls-18"
path = "src/lists_strings/18-framed.rs"

[[bin]]
name = "ls-19"
path = "src/lists_strings/19-pig-latin.rs"

[[bin]]
name = "inter-1"
path = "src/intermediate/1-permutations.rs"


